src/test/ui/parser/macros-no-semicolon-items.rs
// compile-flags: -Z parse-only

macro_rules! foo()  //~ ERROR semicolon

fn main() {
}
